Small correction to first post

--- a/_posts/2014-05-19-splash.md
+++ b/_posts/2014-05-19-splash.md
@@ -28,11 +28,4 @@ On an architectural note, Splash is built around OpenGL with the help of [GLFW](
 
 The documentation provided in the repository gives (I hope) enough information on how to use it, although some features need to be explained and illustrated more thoroughly, like the semi-automatic calibration. It works by considering that each projector is linked to a virtual camera, so the calibration problem is indeed a 3D - 2D correspondance problem. An algorithm to solve this is available in OpenCV (solvePnP and solvePnPRansac), but I needed to also guess the field of view and the x and y shifts of the projector, so I implemented my own reprojection error minimization method with the help of the [GNU Scientific Library](https://www.gnu.org/software/gsl).
 
-Splash is already packaged for Ubuntu / Mint / other compatible distribution, you only have to follow the installation instructions in the README.md and right after having added the PPAs, do a simple:
-
-{% highlight bash %}
-sudo apt-get update
-sudo apt-get install splash
-{% endhighlight %}
-
-If you happen to use this software in your project, please tell me, even if you stumbled upon some limitations. Splash is meant to evolve, mainly to follow our research program, but I want to improve it any way which makes sense.
+Splash is already packaged for Ubuntu / Mint / other compatible distribution, you only have to follow the installation instructions in the README.md. If you happen to use this software in your project, please tell me, even if you stumbled upon some limitations. Splash is meant to evolve, mainly to follow our research program, but I want to improve it any way which makes sense.
