Corrected a typo in 2014-05-19-splash.md

--- a/_posts/2014-05-19-splash.md
+++ b/_posts/2014-05-19-splash.md
@@ -19,7 +19,7 @@ So [Splash](http://github.com/paperManu/splash) was initiated. Splash is made to
     <img src="{{ site.url }}/images/splash/four_outputs.jpg">
 </figure>
 
-On an architectural note, Splash is built around OpenGL with the help of [GLFW](http://www.glfw.org). The majority of the video flow is configurable, from the input (which currently has to be a shared memory fed through [Shmdata](http://code.sat.qc.ca/libshmdata)). To handle the fact that GLFW can only output to one single display adapter at a time, an instance of Splash is made of multiple processes: a main process which handles inputs and configuration, and child processes for each adapter. Communication between them is done through shared memories (again), this time using [ZeroMQ](http://www.zeromq.org). The idea behind the use of ZeroMQ instead of Shmdata is that, in a hopefully not so distant future, it will be possible to have processes on different computers working together for one massive mapping.
+On an architectural note, Splash is built around OpenGL with the help of [GLFW](http://www.glfw.org). The majority of the video flow is configurable, from the input (which currently has to be a shared memory fed through [Shmdata](http://code.sat.qc.ca/libshmdata)) to the output (number and configuration of the videoprojectors). To handle the fact that GLFW can only output to one single display adapter at a time, an instance of Splash is made of multiple processes: a main process which handles inputs and configuration, and child processes for each adapter. Communication between them is done through shared memories (again), this time using [ZeroMQ](http://www.zeromq.org). The idea behind the use of ZeroMQ instead of Shmdata is that, in a hopefully not so distant future, it will be possible to have processes on different computers working together for one massive mapping.
 
 <figure class="half">
     <img src="{{ site.url }}/images/splash/dome_color_map.jpg">
